# VITSIH25

./: .replit  app.py  pyproject.toml  replit.md
attached_assets/: BLAST_to_3D_Visualization_1758857705960.ipynb  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-Layout-yscale-Did-you-1758852598600_1758852598600.txt  Pasted-def-create-interactive-explorer-downloaded-structures-Create-interactive-widget-for--1758855652184_1758855652184.txt
utils/: blast_utils.py  pdb_utils.py  structure_comparison.py  visualization.py
